fix: changed line gap

--- a/editor-components/feature/feature24/feature24.module.scss
+++ b/editor-components/feature/feature24/feature24.module.scss
@@ -152,12 +152,12 @@
       .list {
         display: grid !important;
         grid-template-columns: repeat(2, 1fr) !important;
-        gap: var(--composer-gap-md) !important;
+        gap: var(--composer-gap-sm) !important;
         row-gap: var(--composer-gap-md) !important;
       }
 
       .row {
-        gap: var(--composer-gap-md);
+        gap: var(--composer-gap-md) !important;
         align-items: flex-start;
 
         .icon-wrapper {
